# discord_next-rs

./: .gitignore  Cargo.toml
client/: .env  Cargo.toml
client/examples/: send_message.rs
client/src/: connection.rs  lib.rs
client/src/client/: mod.rs  ratelimiter.rs
examples/: connect.rs  create_message.rs  echo.rs  send_message.rs
gateway_client/: Cargo.toml
gateway_client/examples/: connect.rs  echo.rs  send_message.rs  slash_command.rs  voice.rs
gateway_client/src/: close_on_drop.rs  connection.rs  extensions.rs  lib.rs
gateway_client/src/voice/: ffmpeg.rs  mod.rs
model/: Cargo.toml
model/src/: custom_serialization.rs  embed.rs  gateway.rs  gateway_events.rs  ids.rs  lib.rs  payload.rs
model/src/voice/: mod.rs  udp.rs
rest_client/: Cargo.toml
rest_client/src/: lib.rs  util.rs
rest_client/src/client/: mod.rs  ratelimiter.rs
src/: client.rs  connection.rs  lib.rs  model.rs
src/client/: mod.rs  ratelimiter.rs
src/model/: embed.rs  enum_number.rs  gateway_events.rs  ids.rs  mod.rs
