[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
name = "discord_next"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
futures-await = {git="https://github.com/alexcrichton/futures-await"}
reqwest = "0.8.5"
serde = "1.0.58"
serde_derive = "1.0.58"
serde_json = "1.0.17"
tokio = "0.1.6"
tokio-tls = "0.1.4"
tokio-tungstenite = "0.5.1"
tungstenite = "0.5.3"
url = "1.7.0"

[dev-dependencies]
dotenv = "0.12.0"

[patch.crates-io.tokio-tungstenite]
git = "https://github.com/snapview/tokio-tungstenite"
