[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
name = "discord_next"
version = "0.1.0"

[dependencies]
bitflags = "1.0.4"
failure = "0.1.1"
futures = "0.1.25"
itertools = "0.8.0"
reqwest = "0.9"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
tokio-tls = "0.2.1"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.0"
url = "1.7.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.tokio]
features = ["async-await-preview"]
version = "0.1.15"

[dev-dependencies]
dotenv = "0.13.0"
envy = "0.3"
