[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
name = "discord_next"
version = "0.1.0"

[features]
default = ["voice"]
voice = ["rust_sodium","opus","discord_next_model/voice"]

[dependencies]
bitflags = "1.0.4"
failure = "0.1.1"
futures-preview = {version="=0.3.0-alpha.17",features=["nightly","async-await"]}
itertools = "0.8.0"
reqwest = "0.9"
serde = {version="1.0.87", features=["derive"]}
serde_derive = "1.0.87"
serde_json = "1.0.38"
tokio-tungstenite = "0.8.0"
tungstenite = "0.8.0"
url = "1.7.2"
discord_next_model = {path="../model"}
discord_next_rest = {path="../rest_client"}
tracing="0.1.3"
tracing-futures={git="https://github.com/tokio-rs/tracing.git",features=["std-future"]}
byteorder="1.3.2"

[dependencies.futures_01]
package = "futures"
version = "0.1.28"

[dependencies.rust_sodium]
version = "0.10.2"
optional = true

[dependencies.opus]
version = "0.2.1"
optional = true

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"

[dependencies.tokio-timer]
git = "https://github.com/tokio-rs/tokio"
features = ["async-traits"]

[dev-dependencies]
dotenv = "0.13.0"
envy = "0.3"
tracing-fmt={git="https://github.com/tokio-rs/tracing.git"}