[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
name = "discord_next"
version = "0.1.0"

[features]
default = ["voice"]
voice = ["rust_sodium","opus","discord_next_model/voice"]

[dependencies]
bitflags = "1.0.4"
thiserror = "1.0.9"
futures = "0.3.1"
itertools = "0.8.0"
reqwest = "0.10.0"
serde = {version="1.0.87", features=["derive"]}
serde_derive = "1.0.87"
serde_json = "1.0.38"
tokio-tungstenite = {git="https://github.com/dbcfd/tokio-tungstenite.git",rev="5a50cf83fc51ff110d0c89746fca880659cee300",features=["tls"]}
tungstenite = "0.9.2"
url = "2.1.0"
discord_next_model = {path="../model"}
discord_next_rest = {path="../rest_client"}
tracing="0.1.11"
tracing-futures = "0.2.0"
byteorder="1.3.2"
tokio = { version = "0.2", features = ["full"] }

[dependencies.rust_sodium]
git = "https://github.com/dbrgn/rust_sodium.git"
rev = "07699c42de493ebf9fe05fa2293dc2838962093e"
optional = true

[dependencies.opus]
version = "0.2.1"
optional = true

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dev-dependencies]
dotenv = "0.13.0"
envy = "0.3"
tracing-subscriber = {version="0.1.6",features=["fmt"]}