[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
name = "discord_next_model"
version = "0.1.0"

[features]
default = []
voice = []

[dependencies]
bitflags = "1.0.4"
serde = {version="1.0.87", features=["derive"]}
serde_json = "1.0.38"
url = "1.7.2"
failure = "0.1.1"
log = "0.4.6"
byteorder="1.3.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"