[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
name = "discord_next_rest"
version = "0.1.0"

[features]
default = []

[dependencies]
failure = "0.1.1"
futures = "0.3.1"
itertools = "0.8.0"
serde = {version="1.0.87", features=["derive"]}
serde_derive = "1.0.87"
serde_json = "1.0.38"
url = "2.1.0"
discord_next_model = {path="../model"}
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.0"
hyper = "0.13.1"
http = "0.2.0"
tracing = "0.1.11"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dev-dependencies]
dotenv = "0.13.0"
envy = "0.3"